Fixed HTTPs error, made project ready for GitHub hosting

--- a/src/index.html
+++ b/src/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="utf-8">
   <title>Scholarly</title>
-  <base href="/">
+  <base href="/ScholarlyWeb/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
   <link href="./assets/fa/css/font-awesome.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-  <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
   <app-root></app-root>
